k8s/coma/apps/media/navidrome/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: media
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - music.artichoke.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 120s
        backendRequest: 120s
      backendRefs:
        - name: navidrome
          port: 4533
